# ruff-fix-and-commit

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/ruff_fix_and_commit/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_.py  test_cli.py
